--- a/templates/allrecipes.html
+++ b/templates/allrecipes.html
@@ -5,7 +5,7 @@
  
   <nav>
     <div class="nav-wrapper">
-      <form id="search-form" action="{{url_for('search')}}">
+      <form id="search-form" action="{{url_for('search')}}" method="POST">
         <div class="input-field">
           <input id="search" type="search" required placeholder="Search" name="query">
           <label class="label-icon" for="search"><i class="material-icons">search</i></label>
