--- a/static/css/style.css
+++ b/static/css/style.css
@@ -187,3 +187,14 @@ nav {
 #dpl-i {
     margin-left: 10px;
 }
+
+#search-form {
+    background-color: #056B7E;
+    max-width: 300px;
+    margin: auto;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
