--- a/templates/search.html
+++ b/templates/search.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% block content %}
 
-<h1>Results for: <em>{{ query }}</em>.</h1>
+<h3>Results for: <em>{{ query }}</em>.</h3>
 
 <div class="row text-center">
     {% for recipe in results %}
@@ -8,7 +8,7 @@
         <div class="col s12 m6 l4">
             <div class="card">
                 <div class="card-image">
-                    <img src="{{recipe.image}}" width="250px" height="250px">
+                    <img src="{{url_for('file', filename=recipe['image'])}}" width="250px" height="250px">
                     <span class="card-title"></span>
                     <a href="{{url_for('recipe', recipe_id=recipe._id)}}"
                         class="btn-floating halfway-fab waves-effect waves-light blue-tint"><i
