--- a/templates/allrecipes.html
+++ b/templates/allrecipes.html
@@ -19,7 +19,7 @@
     {% for recipe in recipes %}
     <li class="collection-item avatar">
       <img
-        src="{{url_for('file', filename=recipe['image'] or "https://res.cloudinary.com/dgsqmdssi/image/upload/v1580049398/ccRecipes/cc_logo_mmjt5c.png")}}"
+        src="{{url_for('file', filename=recipe['image'] )}}"
         alt="recipe-image" class="circle">
       <span class="title"><strong><u>{{recipe.recipe_name}}</u></strong></span>
       <p>Category: {{recipe.category_name}} <br>
