attempting to fix api call

--- a/templates/editrecipe.html
+++ b/templates/editrecipe.html
@@ -101,7 +101,7 @@
                     <div class="col s11">
                         <ol id="display-method">
                             {% for method in recipes.method %}
-                            <li>{{ method.capitalize() }} </li>
+                            <li>{{ method }} </li>
                             {% endfor %}
                         </ol>
                     </div>
