--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -64,7 +64,7 @@
   </div>
   <ol>
     {% for method in recipe.method %}
-    <li>{{ method.capitalize() }} </li>
+    <li>{{ method }} </li>
     {% endfor %}
   </ol>
   <br>
