--- a/templates/addrecipe.html
+++ b/templates/addrecipe.html
@@ -160,8 +160,10 @@
             <div style="height:0px;overflow:hidden">
                 <input type="file" id="fileInput" name="fileInput" />
             </div>
-            <img src="https://res.cloudinary.com/dgsqmdssi/image/upload/v1580049398/ccRecipes/cc_logo_mmjt5c.png"
+           
+            <img src="https://res.cloudinary.com/dgsqmdssi/image/upload/v1580122637/ccRecipes/cc_logo_emcb07.svg"
                 id="preview" width="150px" height="150px">
+            
             <br>
             <a id='pic-upload' class="waves-effect waves-light btn btn-small"><i
                     class="material-icons left">add_a_photo</i>Upload
@@ -230,9 +232,9 @@
             <br>
             <div>
                 <div class="row">
-                    <div class="col s10 m3">
-                        <img src="https://res.cloudinary.com/dgsqmdssi/image/upload/v1580049398/ccRecipes/cc_logo_mmjt5c.png"
-                            id="display-img" name="display-img" class="" height="150px" width="150px">
+                    <div class="col s10 m3">                    
+                        <img src="https://res.cloudinary.com/dgsqmdssi/image/upload/v1580122637/ccRecipes/cc_logo_emcb07.svg"
+                            id="display-img" name="display-img" class="" height="150px" width="150px">                    
                     </div>
                     <div class="col s1">
                         <a id="edit-image" class="btn-floating btn-small blue-tint">
