--- a/templates/allrecipes.html
+++ b/templates/allrecipes.html
@@ -18,9 +18,10 @@
   <ul class="collection">
     {% for recipe in recipes %}
     <li class="collection-item avatar">
+    
       <img
         src="{{url_for('file', filename=recipe['image'] )}}"
-        alt="recipe-image" class="circle">
+        alt="recipe-image"  onerror="this.onerror=null;this.src='https://res.cloudinary.com/dgsqmdssi/image/upload/v1580122637/ccRecipes/cc_logo_emcb07.svg';" class="circle">
       <span class="title"><strong><u>{{recipe.recipe_name}}</u></strong></span>
       <p>Category: {{recipe.category_name}} <br>
         Rating: {{recipe.rating}}
