--- a/templates/editrecipe.html
+++ b/templates/editrecipe.html
@@ -67,7 +67,7 @@
                         <div style="height:0px;overflow:hidden">
                             <input type="file" id="fileInput" name="fileInput" />
                         </div>
-                        <img src="{{url_for('file', filename=recipes['image'] )}}" alt="recipe image" id="edit_preview"
+                        <img src="{{url_for('file', filename=recipes['image'] )}}" alt="recipe image" onerror="this.onerror=null;this.src='https://res.cloudinary.com/dgsqmdssi/image/upload/v1580122637/ccRecipes/cc_logo_emcb07.svg';" id="edit_preview"
                             width="150px" height="150px">
                     </div>
                     <div class="col s1">
