--- a/templates/addrecipe.html
+++ b/templates/addrecipe.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %} {% block content %}
 <br>
 <form action="{{url_for('insert_recipe')}}" method="POST" enctype='multipart/form-data' class='col s12'>
+    <!--Add info section-->
     <div id="new_recipe" class="visible">
         <h3>add recipe</h3>
         <div class="row">
@@ -160,10 +161,10 @@
             <div style="height:0px;overflow:hidden">
                 <input type="file" id="fileInput" name="fileInput" />
             </div>
-           
+
             <img src="https://res.cloudinary.com/dgsqmdssi/image/upload/v1580122637/ccRecipes/cc_logo_emcb07.svg"
                 id="preview" width="150px" height="150px">
-            
+
             <br>
             <a id='pic-upload' class="waves-effect waves-light btn btn-small"><i
                     class="material-icons left">add_a_photo</i>Upload
@@ -210,7 +211,7 @@
                                     min</span></span></span>
                     </div>
                     <div class="col s4"> <span><strong> cook time: </strong><span><u id="display-cook"></u><span>
-                                min</span></span></span>
+                                    min</span></span></span>
                     </div>
                     <div class="col s4"> <span><strong> total time: </strong><span><u id="display-total"></u><span>
                                     min</span></span></span>
@@ -232,9 +233,9 @@
             <br>
             <div>
                 <div class="row">
-                    <div class="col s10 m3">                    
+                    <div class="col s10 m3">
                         <img src="https://res.cloudinary.com/dgsqmdssi/image/upload/v1580122637/ccRecipes/cc_logo_emcb07.svg"
-                            id="display-img" name="display-img" class="" height="150px" width="150px">                    
+                            id="display-img" name="display-img" class="" height="150px" width="150px">
                     </div>
                     <div class="col s1">
                         <a id="edit-image" class="btn-floating btn-small blue-tint">
