--- a/templates/allrecipes.html
+++ b/templates/allrecipes.html
@@ -2,7 +2,6 @@
 <div>
   <br>
   <br>
- 
   <nav>
     <div class="nav-wrapper">
       <form id="search-form" action="{{url_for('search')}}" method="POST">
@@ -18,10 +17,9 @@
   <ul class="collection">
     {% for recipe in recipes %}
     <li class="collection-item avatar">
-    
-      <img
-        src="{{url_for('file', filename=recipe['image'] )}}"
-        alt="recipe-image"  onerror="this.onerror=null;this.src='https://res.cloudinary.com/dgsqmdssi/image/upload/v1580122637/ccRecipes/cc_logo_emcb07.svg';" class="circle">
+      <img src="{{url_for('file', filename=recipe['image'] )}}" alt="recipe-image"
+        onerror="this.onerror=null;this.src='https://res.cloudinary.com/dgsqmdssi/image/upload/v1580122637/ccRecipes/cc_logo_emcb07.svg';"
+        class="circle">
       <span class="title"><strong><u>{{recipe.recipe_name}}</u></strong></span>
       <p>Category: {{recipe.category_name}} <br>
         Rating: {{recipe.rating}}
