--- a/templates/base.html
+++ b/templates/base.html
@@ -2,8 +2,12 @@
 <html>
 
 <head>
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css"
+    integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
   <link rel="icon" type='image/png'
     href="https://res.cloudinary.com/dgsqmdssi/image/upload/v1580036393/ccRecipes/cc_logo_dp7vxg.ico">
@@ -25,7 +29,6 @@
           <li><a href="{{url_for('get_categories') }}" class="menu-view">home</a></li>
           <li><a href="{{url_for('allrecipes') }}" class="menu-view">all recipes</a></li>
           <li><a href="{{ url_for('add_recipe') }}" class="menu-view">add recipe</a></li>
-
         </ul>
       </div>
     </nav>
@@ -37,20 +40,13 @@
     </ul>
   </header>
   <main>
-
-
-
-    <div class='container'>
-      {% block content %}
-      {% endblock %}
-    </div>
+    {% block content %}
+    {% endblock %}
   </main>
+  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script src="{{url_for('static', filename='js/main.js')}}" type='text/javascript'></script>
-
-
-
 </body>
 
 </html>
