--- a/templates/home.html
+++ b/templates/home.html
@@ -1,23 +1,31 @@
 {% extends 'base.html'%} {% block content %}
 <div class="row">
-    <h5>Pick your category:</h5>
-<div class="row">
- {% for category in categories %}
+  <h5>Pick your category:</h5>
+  <div class="row">
+    {% for category in categories %}
     <div class="col s12 m6 l4">
       <div class="card">
         <div class="card-image">
           <img src="{{category.image}}" width="250px" height="250px">
           <span class="card-title"></span>
-          <a href="{{url_for('get_recipes', category_name=category['category_name'])}}" class="btn-floating halfway-fab waves-effect waves-light blue-tint"><i class="material-icons">add</i></a>
+          <a href="{{url_for('get_recipes', category_name=category['category_name'])}}"
+            class="btn-floating halfway-fab waves-effect waves-light blue-tint"><i class="material-icons">add</i></a>
         </div>
         <div class="card-content">
           <p><strong>{{category.category_name}}</strong></p>
         </div>
       </div>
     </div>
-    {% endfor %}   
+    {% endfor %}
   </div>
-     
-
 </div>
+<footer class="page-footer">
+  <div class="footer-copyright">
+    <div class="container">
+      © 2020 Copyright carb-cutters
+      <a class="grey-text text-lighten-4 right" href="https://github.com/cvdebeer/ms3_cc"><i class="fab fa-github"
+          size="3x"></i></a>
+    </div>
+  </div>
+</footer>
 {% endblock %}
